# swift_cmake_template

./: BridgingHeader.h  CMakeLists.txt  main.swift
